external-dns-current.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2025-03-24T21:10:19Z","generation":1,"name":"external-dns","namespace":"kube-system","resourceVersion":"7311793","uid":"386b608a-b0a0-4deb-8865-0adc3bee05f0"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"external-dns"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"creationTimestamp": [...]
  creationTimestamp: "2025-03-24T21:10:19Z"
  generation: 2
  name: external-dns
  namespace: kube-system
  resourceVersion: "7312155"
  uid: 386b608a-b0a0-4deb-8865-0adc3bee05f0
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: external-dns
    spec:
      containers:
      - args:
        - --source=ingress
        - --provider=digitalocean
        - --domain-filter=posey.ai
        - --policy=sync
        - --registry=txt
        - --txt-owner-id=posey-k8s
        - --publish-internal-services
        - --namespace-filter=posey,argocd
        env:
        - name: DO_TOKEN
          valueFrom:
            secretKeyRef:
              key: access-token
              name: digitalocean
        image: registry.k8s.io/external-dns/external-dns:v0.14.0
        imagePullPolicy: IfNotPresent
        name: external-dns
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: external-dns
      serviceAccountName: external-dns
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-03-24T21:11:54Z"
    lastUpdateTime: "2025-03-24T21:11:54Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-03-24T21:10:19Z"
    lastUpdateTime: "2025-03-24T21:11:54Z"
    message: ReplicaSet "external-dns-5cc566f7df" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
