postgres-statefulset-current.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"name":"postgres","namespace":"posey"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"postgres"}},"serviceName":"postgres","template":{"metadata":{"labels":{"app":"postgres"}},"spec":{"containers":[{"args":["-c","config_file=/etc/postgresql/postgresql.conf"],"env":[{"name":"POSTGRES_USER","valueFrom":{"secretKeyRef":{"key":"POSTGRES_USER","name":"postgres-credentials"}}},{"name":"POSTGRES_PASSWORD","valueFrom [...]
  creationTimestamp: "2025-03-20T03:52:47Z"
  generation: 2
  name: postgres
  namespace: posey
  resourceVersion: "22855"
  uid: 53d33454-e42f-4552-8358-cb1bb916b6dc
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-03-19T21:07:19-07:00"
      creationTimestamp: null
      labels:
        app: postgres
    spec:
      containers:
      - args:
        - -c
        - config_file=/etc/postgresql/postgresql.conf
        env:
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USER
              name: postgres-credentials
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: postgres-credentials
        - name: POSTGRES_DB
          valueFrom:
            secretKeyRef:
              key: POSTGRES_DB
              name: postgres-credentials
        - name: PGPORT
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PORT
              name: postgres-config
        - name: PGDATA
          value: /var/lib/postgresql/data/pgdata
        image: posey-postgres:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - $(POSTGRES_USER)
            - -d
            - postgres
            - -p
            - "3333"
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: postgres
        ports:
        - containerPort: 3333
          name: postgres
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - $(POSTGRES_USER)
            - -d
            - postgres
            - -p
            - "3333"
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          runAsGroup: 999
          runAsUser: 999
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      dnsPolicy: ClusterFirst
      initContainers:
      - command:
        - sh
        - -c
        - |
          mkdir -p /var/lib/postgresql/data/pgdata
          chown -R 999:999 /var/lib/postgresql/data
          chmod -R 0700 /var/lib/postgresql/data
        image: busybox
        imagePullPolicy: Always
        name: init-pgdata
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 999
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: postgres-data
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 1
  collisionCount: 0
  currentReplicas: 1
  currentRevision: postgres-7c64d64666
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updateRevision: postgres-7c64d64666
  updatedReplicas: 1
